Fix the graph dark themes to be more visible

--- a/smap/public/stylesheets/themes/dark/dark-red-theme.css
+++ b/smap/public/stylesheets/themes/dark/dark-red-theme.css
@@ -14,6 +14,8 @@
     --accent-color-dark:        rgba(255, 120, 120, 1);     /* Darker Accent */
     --secondary-color-light:    rgba(70,  70,  70,  1);     /* Brighter Secondary */
     --secondary-color-dark:     rgba(30,  0,   0,   1);     /* Darker Secondary */
+    --graph-color-light:        rgba(120, 70,  70, 1);     /* Less Saturated Lighter Accent */
+    --graph-color-dark:         rgba(100, 50,  50,  1);     /* Less Saturated Darker Accent */
     --font-sans:                'Quicksand', sans-serif;
     --font-serif:               'EB Garamond', serif;
     --inversion:                100%;
